Added simple error message and updated README

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <div id="citybikes">
     <div id="stations" >
         <h1>Bysykler i Oslo</h1>
-        <div v-for="station in stations">
+        <div v-if="stations.length > 0">
+            <div v-for="station in stations">
             <p name="station">
             <div><b>Id:</b> {{ station.station_id }}</div>
             <div><b>Navn:</b> {{ station.name }}</div>
@@ -11,29 +12,32 @@
             <div><b>Tilgjengelig:</b> {{ station.num_bikes_available }} sykler og {{station.num_docks_available}} låser </div>
             </p>
         </div>
+        </div>
+        <div v-else>
+            Kunne desverre ikke laste informasjon om stasjonene
+        </div>
     </div>
 </div>
 <script src="https://unpkg.com/vue"></script>
 <script>
-    Vue.component('station-list', {
-        props: ['stations'],
-    });
-
     app = new Vue({
         el: '#citybikes',
         data: {
-            stations: []
+            stations: [],
+            showError: false,
         },
         mounted() {
             const stations = requestStationsData('https://gbfs.urbansharing.com/oslobysykkel.no/station_information.json')
             const availability = requestStationsData('https://gbfs.urbansharing.com/oslobysykkel.no/station_status.json')
 
-            stations.forEach(station => {
-                const stationAvailability = availability.find(availabe => availabe.station_id === station.station_id)
-                station.num_docks_available = stationAvailability.num_docks_available
-                station.num_bikes_available = stationAvailability.num_bikes_available
-            })
-            this.stations = stations.sort((a, b) => a.name.localeCompare(b.name))
+            if (stations.length !== 0 && availability.length !== 0) {
+                stations.forEach(station => {
+                    const stationAvailability = availability.find(availabe => availabe.station_id === station.station_id)
+                    station.num_docks_available = stationAvailability.num_docks_available
+                    station.num_bikes_available = stationAvailability.num_bikes_available
+                })
+                this.stations = stations.sort((a, b) => a.name.localeCompare(b.name))
+            }
         }
     });
 
@@ -45,6 +49,8 @@
 
         if (request.status === 200) {
             return JSON.parse(request.responseText).data.stations
+        } else {
+            return []
         }
     }
 
